[package]
authors = ["Aron Homberg <info@aron-homberg.de>"]
name = "lightningimg"
version = "0.0.1"
description = "A transparent and safe image converter. Encodes PNG, JPG, TIFF to WebP."
license = "MIT"
edition = "2021"
keywords = ["PNG", "JPG", "GIF", "WebP", "TIFF"]
repository = "https://github.com/kyr0/lightningimg"

[lib]
crate-type = ["cdylib"]

[package.metadata.napi]
name = "lightningimg"

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
gif = "0.13.1"
webp = "0.3.0"
rayon = "1.10.0"
image = "0.25.5"
chrono = "0.4"
futures = "0.3"
serde = "1"
serde_bytes = "0.11"
serde_derive = "1"
serde_json = "1"
indexmap = "2"
rustc-hash = "2"

[build-dependencies]
napi-build = "2"


[profile.release]
lto = true